erDiagram
    BRAND ||--o{ PRODUCT : has
    CATEGORY ||--o{ PRODUCT : groups
    USER ||--o{ REVIEW : writes
    PRODUCT ||--o{ REVIEW : receives
    USER ||--o{ CART : owns
    CART ||--o{ CART_ITEM : contains
    PRODUCT ||--o{ CART_ITEM : appears_in
    USER ||--o{ ORDER : places
    ORDER_STATUS ||--o{ ORDER : tracks
    ORDER ||--|{ ORDER_ITEM : contains
    PRODUCT ||--o{ ORDER_ITEM : appears_in

    BRAND {
        int brand_id PK
        varchar name UK
    }

    CATEGORY {
        int category_id PK
        varchar name UK
    }

    USER {
        int user_id PK
        varchar username UK
        varchar email UK
        varchar password
    }

    PRODUCT {
        int product_id PK
        varchar name
        text description
        decimal price
        varchar unit
        varchar image
        int discount
        boolean available
        int brand_id FK
        int category_id FK
    }

    REVIEW {
        int review_id PK
        int user_id FK
        int product_id FK
        int rating
        text comment
    }

    CART {
        int cart_id PK
        int user_id FK
    }

    CART_ITEM {
        int cart_item_id PK
        int cart_id FK
        int product_id FK
        int quantity
    }

    ORDER_STATUS {
        int order_status_id PK
        varchar name UK
    }

    ORDER {
        int order_id PK
        int user_id FK
        int order_status_id FK
        decimal total_price
    }

    ORDER_ITEM {
        int order_item_id PK
        int order_id FK
        int product_id FK
        int quantity
    }
